Fix awesomplete alignment

--- a/kasse/static/kasse/style.css
+++ b/kasse/static/kasse/style.css
@@ -160,4 +160,4 @@ input, select {
 }
 
 /* home.html */
-div.awesomplete { vertical-align: middle; }
+div.awesomplete { vertical-align: bottom; }
